--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "next": "9.5.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "sass": "^1.26.10"
+    "sass": "^1.26.10",
+    "use-dark-mode": "^2.3.1"
   }
 }
