--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "eslint components/** pages/**"
   },
   "dependencies": {
     "next": "9.5.2",
@@ -13,5 +14,9 @@
     "react-dom": "16.13.1",
     "sass": "^1.26.10",
     "use-dark-mode": "^2.3.1"
+  },
+  "devDependencies": {
+    "eslint": "^7.7.0",
+    "eslint-plugin-react": "^7.20.6"
   }
 }
