--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "sass": "^1.26.10",
+    "styled-components": "^5.2.0",
     "use-dark-mode": "^2.3.1"
   },
   "devDependencies": {
+    "babel-plugin-styled-components": "^1.11.1",
     "eslint": "^7.7.0",
     "eslint-plugin-react": "^7.20.6"
   }
